feat: change logo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link
     rel="icon"
     type="image/svg+xml"
-    href="/hoobank.svg"
+    href="/favico.png"
   />
   <meta
     name="viewport"
